move some files to proper folder
