# internal/handler/http/gen/openapi_types.gen.go
@@ -3,8 +3,8 @@
 // Code generated by github.com/deepmap/oapi-codegen DO NOT EDIT.
 package gen
 
-// Conversion defines model for Conversion.
-type Conversion struct {
+// ConversionRequest defines model for ConversionRequest.
+type ConversionRequest struct {
 	CurrencyIdFrom int64 `json:"currency_id_from"`
 	CurrencyIdTo   int64 `json:"currency_id_to"`
 	Rate           int64 `json:"rate"`
@@ -59,7 +59,14 @@ type GetConversionAmountParams struct {
 }
 
 // CreateConversionJSONBody defines parameters for CreateConversion.
-type CreateConversionJSONBody Conversion
+type CreateConversionJSONBody ConversionRequest
+
+// CreateConversionParams defines parameters for CreateConversion.
+type CreateConversionParams struct {
+
+	// Base64 encoded squad / tribe name
+	Authorization *string `json:"Authorization,omitempty"`
+}
 
 // GetCurrencyParams defines parameters for GetCurrency.
 type GetCurrencyParams struct {
